--- a/views/createClientSuministro.ejs
+++ b/views/createClientSuministro.ejs
@@ -403,6 +403,7 @@
                                     <select name="tipoCliente" id="tipoCliente" class="form-control">
                                         <option>CASA - HOGAR</option>   
                                         <option>NEGOCIO - COMERCIO</option>
+                                        <option>RESTAURANTE</option>
                                         <option>EDIFICIO SUMINISTRO</option> 
                                     </select>
                                 </div>
