--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -301,8 +301,10 @@
                                     <label for="pass" class="control-label mb-1">Contraseña</label>
                                     <input type="text" class="form-control" id="pass" name="pass">
                                 </div>
-                                <div class="col-md-12">
-                                    
+                                
+                                <div class="col-md-3">
+                                    <label for="telefono" class="control-label mb-1">Telefono</label>
+                                    <input type="text" class="form-control" id="telefono" name="telefono">
                                 </div>
                                 
                                 <div class="col-md-3">
